<resources>
    <string name="app_name">TestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrationTitle">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="privacy">Нажимая кнопку “Войти”, Вы принимаете условия программы лояльности</string>
    <string name="description">Пенка для лица Глубокое очищение содержит минеральную воду и соду, способствует глубокому очищению пор от различных загрязнений, контролирует работу сальных желез, сужает поры. Обладает мягким антисептическим действием, не пересушивая кожу. Минеральная вода тонизирует и смягчает кожу.</string>
    <string name="hide">Скрыть</string>
    <string name="characteristics">Характеристики</string>
    <string name="consistance">Water, Propylene Glycol, Dipropylene Glycol, Lauric acid, Myristic Acid, Potassium Hydroxide, Lauryl Hydroxysultaine, Potassium Cocoate, Potassium Cocoyl Glycinate, Sodium Chloride, Glycerin, Phenoxyethanol, Chlorphenesin, Fragrance, Caprylyl Glycol, Ethylhexylglycerin, Capric acid, Palmitic Acid, Disodium EDTA, Sodium Bicarbonate, Cocamidopropyl Betaine, Butylene Glycol.</string>
    <string name="moreInfo">Подробнее</string>
    
    <string-array name="sortTypes">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>
</resources>