<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="sam.sultan.onlineCatalog.registration.presentation.RegistrationFragment">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationTitle"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTxtContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/edit_text_corner"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Имя"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameEditTxtContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_corner"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Фамилия"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberEditTxtContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_corner"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        android:layout_marginHorizontal="16dp">

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Номер телефона"
            android:singleLine="true"
            android:inputType="phone|number"
            android:imeOptions="actionDone"
            app:mask="+7 ### ### ####" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:alpha="0.5"
        android:backgroundTint="@color/register_btn_bg"
        android:fontFamily="sans-serif-medium"
        android:padding="18dp"
        android:text="@string/sign_in"
        android:clickable="false"
        app:cornerRadius="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="11dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="95dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/privacy"
            android:textAlignment="center"
            android:textColor="#A0A1A3"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>