<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".detailInfo.presentation.DetailInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/arrowBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow_icon"
                android:background="@color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>


            <ImageButton
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_icon"
                android:background="@color/transparent"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="368dp"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/favoriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/add_to_favorite_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/transparent"
                android:src="@drawable/question_mark_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/itemImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_marginVertical="50dp"
                android:layout_marginHorizontal="30dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pagination_img"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A`PIEU"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:textColor="@color/gray" />
            <TextView
                android:id="@+id/subTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Пенка для умывания`A`PIEU` `DEEP CLEAN` 200 мл"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/availableTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Доступно для заказа "
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/edit_text_bg"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/full_star_icon"/>

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/full_star_icon"/>

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/full_star_icon"/>

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/full_star_icon"/>

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/full_star_icon"/>

                <TextView
                    android:id="@+id/rateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/gray"
                    android:textStyle="normal"
                    android:text="5.0"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dot_icon"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="7dp"/>

                <TextView
                    android:id="@+id/feedBackTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/gray"
                    android:textStyle="normal"
                    android:text="5 отзывов"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceWithDiscountTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:text="549 ₽"/>

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="12sp"
                    android:textColor="@color/gray"
                    android:text="849 ₽"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="11dp"
                    android:backgroundTint="@color/pink">

                    <TextView
                        android:id="@+id/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="6dp"
                        android:layout_marginVertical="3dp"
                        android:text="-35%"
                        android:textSize="9sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:text="Описание"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/brandTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="9dp"
                        android:layout_marginVertical="15dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="A`PIEU"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:background="@color/transparent"
                        android:src="@drawable/right_arrow_icon" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/dark"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/hideTxtBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hide"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/characteristics"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/characteristicsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Состав"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_weight="1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/to_copy_icon"
                    android:background="@color/transparent"/>

            </LinearLayout>

            <TextView
                android:id="@+id/consistanceTxt"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/consistance"
                android:textSize="12sp"
                android:textColor="@color/dark"/>

            <TextView
                android:id="@+id/hideConsistanceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:fontFamily="sans-serif-medium"
                android:text="@string/moreInfo"/>
            
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/register_btn_bg"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/priceWithDiscountTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="549₽"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/priceTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="949₽"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:layout_weight="1"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Добавить корзину"
                        android:textSize="14sp"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>